--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,9 @@
 
 body{
     font-family: var(--main-font);
+    min-height: 100vh;
+    width: 100vw;
+    position: relative;
     
 }
 
@@ -72,7 +75,8 @@ footer{
     text-align: right;
     padding: 1.5em;
     font-family: var(--main-font);
-    margin-bottom: auto;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .form{
@@ -139,5 +143,19 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media screen and (max-width:400px){
+    .form label{
+        font-size: 20px;
+    }
+
+    .form__field{
+        width: 50%;
+    }
+
+    .btn-solid{
+        width: 30%;
+    }
 }
 
