--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -33,6 +33,8 @@ body {
 
 .about-content__text{
     font-size: 24px;
+    text-align: justify;
+    line-height: 1.5em;
     width: 50%;
 }
 
@@ -43,6 +45,7 @@ body {
 
     .about-content__text{
         width: 100%;
+        font-size: 20px;
                 
     }
 }
